<resources>
    <string name="app_name">RBPlants</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="recovery_password">Recovery password</string>
    <string name="hello">Hello</string>
    <string name="confirm_exit">Confirm exit?</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="full_name_signup">Full name</string>
    <string name="confirm_password_hint">Confirm password</string>
    <string name="alert_sign_out">Sign out?</string>
    <string name="search">Search</string>
    <string name="nav_item_search">Search</string>
    <string name="nav_item_data">Data</string>
    <string name="nav_item_profile_menu">Profile\'s menu</string>
    <string name="data">Data</string>
    <string name="menu_profile">Profile\'s menu</string>
    <string name="profile">Profile</string>
    <string name="full_name">Full name</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="phone_number">Phone number</string>
    <string name="role">Role</string>
    <string name="sign_out">Sign out</string>
    <string name="edit">Edit</string>
    <string name="edit_profile">Edit profile</string>
    <string name="my_plants">My plants</string>
    <string name="my_groups">My groups</string>
    <string name="my_gallery">My gallery</string>
    <string name="score">Score</string>
    <string name="save">Save</string>
    <string name="invalid_email_address">Invalid email address</string>
    <string name="invalid_password">Invalid password</string>
    <string name="input_password">Input password</string>
    <string name="email_sended">Email sended</string>
    <string name="email_not_sended">Email not sended</string>
    <string name="not_match_password">Passwords do not match</string>
    <string name="not_be_empty">Can\'t be empty</string>
    <string name="nav_item_camera">Camera</string>
    <string name="take_a_photo">Take a photo</string>
    <string name="flash_auto">Flash auto</string>
    <string name="switch_camera">Switch camera</string>
    <string name="flash_off">Flash off</string>
    <string name="flash_on">Flash on</string>
    <string name="input_photo_name">Input photo name</string>
    <string name="just_simple_name">Just simple name</string>
    <string name="need_input_photo_name">Need input photo name</string>
    <string name="photos">Photos</string>
    <string name="input_params_what_you_now">Input params what you now</string>
    <string name="admin">Admin</string>
</resources>
